fixed text alignment

--- a/trial_1/css/style.css
+++ b/trial_1/css/style.css
@@ -460,6 +460,7 @@ box-shadow:0px 0px 4px rgba(0,0,0,0.4);
 
 .mask-content{
   padding: 3%;
+  text-align: left;
 
 }
 
